refactor: minor code fixes in main class and CronJobManager
- Use Lombok @Getter in ServerManagerPlugin to reduce boilerplate
- Use Logger#log(Level, String, Throwable) override for better log
  information where exceptions are being logged
- Use Properties#setProperty as opposed to "put"